# recall

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  snapcraft.yaml  vite.config.js
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: snap-publish.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  history.rs  lib.rs  main.rs  models.rs  settings.rs
src/lib/: bindings.ts  state.ts
src/lib/api/: settings.ts
src/lib/components/: ClipboardHistory.svelte  ClipboardItem.svelte  ClipboardItemDetail.svelte  Content.svelte  Header.svelte
src/lib/stores/: clipboard.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/settings/: +page.svelte
