[package]
name = "recall"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "recall_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2.3.0"
uuid = {version = "1.17.0", features = ['v4'] }
chrono = "0.4.41"
lazy_static = "1.5.0"
arboard = "3.6.0"
tokio = { version = "1.47.0", features = ["time"] }
clipboard-master = "3.1.3"
ts-rs = { version = "10", features = ["uuid-impl"] }
base64 = "0.22"

